@@ -7,9 +7,10 @@
 - Added support for reading most client-data settings from settings.xml
 - Added support for XML includes, both absolute and relative
 - Added support for map/layer mask
-- Added support for sprite replacements
+- Added support for item sprite replacements
 - Added support for particle effects on equipment
 - Added support for hit/miss sounds on equipment for all players
+- Added support for players changing into monsters or NPCs
 - Added online player list to Social window
 - Added notification sound on receiving whisper
 - Added default ports when connecting to a custom server
